# Lepton

./: .coverage  .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  .travis.yml  CHANGELOG.md  CONTRIBUTORS.txt  Dockerfile  LICENSE  Makefile  Makefile.bak  Pipfile  Procfile  README.md  README.rst  celerybeat-schedule  charset.sql  codecov.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  htpasswd  inputs.tf  main.tf  makefile  manage.py  mkdocs.yml  nginx.conf  prometheus.yml  pytest.ini  requirements.txt  run.bat  run.sh  setup.cfg  webauth.py  åå-gallery.txt
.envs/: .local
.envs/.local/: .django  .mysql  .phpmyadmin
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  (+8 more)
api/: conftest.py  settings.py  urls.py
app/: asgi.py  celery.py  constants.py  fixture.json  flower.py  schema.py  settings.py  urls.py  uvicorn.py  wsgi.py
compose/: Dockerfile  wait-for-mysql
config/: urls.py  wsgi.py
docs/: Makefile  conf.py  index.md  index.rst  make.bat
grafana/: grafana.db
infrastructure/: CODEOWNERS  README.md  containers.tf  database.tf  inputs.tf  main.tf  outputs.tf  registry.tf  storage.tf  vnet.tf  web_app.tf
jodel/: admin.py  apps.py  models.py  serializers.py  views.py
jumpbox/: .gitignore  README.md  cloud-init.yaml.tmpl  data.tf  main.tf  outputs.tf  vars.tf
profiling/stress_tester/: Cargo.toml
profiling/stress_tester/src/: main.rs
requirements/: base.txt  local.txt  production.txt
scripts/: app.py
tools/: setup_testdata.py  webauth_dummy_server.py
(+1138 files in other folders)
